--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -56,6 +56,11 @@ jobs:
         with:
           ref: ${{ inputs.tag_name != '' && inputs.tag_name || github.ref_name }}
 
+      - name: Install zip (Windows only)
+        if: runner.os == 'Windows'
+        run: choco install zip -y
+        shell: powershell
+
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
