fix: syntax error in release yaml

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -120,10 +120,10 @@ jobs:
         shell: bash
         run: |
           if [[ "$RUNNER_OS" == "Windows" ]]; then
-            powershell Get-FileHash <file> -Algorithm SHA256
-          else
-            shasum -a 256 <file>
-          fi
+                powershell Get-FileHash "$archive_name" -Algorithm SHA256 | Out-File -Encoding ascii "$archive_name.sha256"
+              else
+                shasum -a 256 "$archive_name" > "$archive_name.sha256"
+              fi
         env:
           archive_name: ${{ env.archive_name }}
 
