--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -116,7 +116,16 @@ jobs:
             echo "archive_name=${RELEASE_DIR}.tar.gz" >> $GITHUB_ENV
           fi
 
-      - name: Compute checksum
+      - name: Compute checksum (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        env:
+          archive_name: ${{ env.archive_name }}
+        run: |
+          Get-FileHash "${env:archive_name}" -Algorithm SHA256 | ForEach-Object { $_.Hash } | Set-Content "${env:archive_name}.sha256"
+
+      - name: Compute checksum (non-Windows)
+        if: runner.os != 'Windows'
         shell: bash
         run: |
           if [[ "$RUNNER_OS" == "Windows" ]]; then
